Deleting a rig crashes Blender under Windows 7 #39623

Closed
opened 2014-04-06 20:41:59 +02:00 by mathieu menuet · 12 comments

System Information
Windows 7

Blender Version
Broken: 2.70 official and latest vc12 build

Short description of error
Deleting a rig crashes Blender

Exact steps for others to reproduce the error
Open attached file, delete rig, Blender crashes (Rig created with the IES Lamps addon from Lokal, but happen with other rigs too and with factory settings)

Actually, Blend file won't upload, don't know why, already 15min for 500Kb... I'll try later, but it's only the default scene with one rig created throug the IES lamp addon from lockal (happened with other rigs, but this one is easily reproducible)

**System Information** Windows 7 **Blender Version** Broken: 2.70 official and latest vc12 build **Short description of error** Deleting a rig crashes Blender **Exact steps for others to reproduce the error** Open attached file, delete rig, Blender crashes (Rig created with the IES Lamps addon from Lokal, but happen with other rigs too and with factory settings) Actually, Blend file won't upload, don't know why, already 15min for 500Kb... I'll try later, but it's only the default scene with one rig created throug the IES lamp addon from lockal (happened with other rigs, but this one is easily reproducible)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @bliblubli

Added subscriber: @bliblubli
Author

bug_rig_delete_v2.blend blend file uploaded :)

[bug_rig_delete_v2.blend](https://archive.blender.org/developer/F84139/bug_rig_delete_v2.blend) blend file uploaded :)
Sergey Sharybin was assigned by Bastien Montagne 2014-04-06 21:14:59 +02:00

Added subscriber: @mont29

Added subscriber: @mont29

Crash confirmed, looks like another despgraph issue from bt:

  • 0 0x00007ffff4e66b90 in __asan_report_error () from /usr/lib/x86_64-linux-gnu/libasan.so.0
  • 1 0x00007ffff4e61664 in __asan_report_load2 () from /usr/lib/x86_64-linux-gnu/libasan.so.0
    #2 0x0000000003467f6c in dag_add_driver_relation (adt=0x6016000f9f78, dag=0x600800400318, node=0x601800141408, isdata=1)
    at /home/i7deb64/blender-2.5-svn/__work__/src/source/blender/blenkernel/intern/depsgraph.c:331

#3 0x00000000034682d8 in dag_add_shader_nodetree_driver_relations (dag=0x600800400318, node=0x601800141408, ntree=0x603000039448)

    at /home/i7deb64/blender-2.5-svn/__work__/src/source/blender/blenkernel/intern/depsgraph.c:368

#4 0x0000000003468792 in dag_add_lamp_driver_relations (dag=0x600800400318, node=0x601800141408, la=0x6036000b9248)

    at /home/i7deb64/blender-2.5-svn/__work__/src/source/blender/blenkernel/intern/depsgraph.c:433

#5 0x000000000346a837 in build_dag_object (dag=0x600800400318, scenenode=0x6018001414c8, scene=0x605e000dd488, ob=0x604a00070288, mask=61)

    at /home/i7deb64/blender-2.5-svn/__work__/src/source/blender/blenkernel/intern/depsgraph.c:717
  • 6 0x000000000346bf92 in build_dag (bmain=0x605000002888, sce=0x605e000dd488, mask=61) at /home/i7deb64/blender-2.5-svn/work/src/source/blender/blenkernel/intern/depsgraph.c:912
  • 7 0x000000000346fd08 in dag_scene_build (bmain=0x605000002888, sce=0x605e000dd488) at /home/i7deb64/blender-2.5-svn/work/src/source/blender/blenkernel/intern/depsgraph.c:1502
  • 8 0x0000000003470761 in DAG_scene_relations_update (bmain=0x605000002888, sce=0x605e000dd488) at /home/i7deb64/blender-2.5-svn/work/src/source/blender/blenkernel/intern/depsgraph.c:1610
  • 9 0x000000000378248f in BKE_scene_update_tagged (eval_ctx=0x6004004ff178, bmain=0x605000002888, scene=0x605e000dd488)
    at /home/i7deb64/blender-2.5-svn/__work__/src/source/blender/blenkernel/intern/scene.c:1533
  • 10 0x0000000001cde29d in wm_event_do_notifiers (C=0x60160000af98) at /home/i7deb64/blender-2.5-svn/work/src/source/blender/windowmanager/intern/wm_event_system.c:377
  • 11 0x0000000001ccee27 in WM_main (C=0x60160000af98) at /home/i7deb64/blender-2.5-svn/work/src/source/blender/windowmanager/intern/wm.c:495
  • 12 0x0000000001ccd231 in main (argc=1, argv=0x7fffffffe308) at /home/i7deb64/blender-2.5-svn/work/src/source/creator/creator.c:1756
Crash confirmed, looks like another despgraph issue from bt: - 0 0x00007ffff4e66b90 in __asan_report_error () from /usr/lib/x86_64-linux-gnu/libasan.so.0 - 1 0x00007ffff4e61664 in __asan_report_load2 () from /usr/lib/x86_64-linux-gnu/libasan.so.0 #2 0x0000000003467f6c in dag_add_driver_relation (adt=0x6016000f9f78, dag=0x600800400318, node=0x601800141408, isdata=1) ``` at /home/i7deb64/blender-2.5-svn/__work__/src/source/blender/blenkernel/intern/depsgraph.c:331 ``` #3 0x00000000034682d8 in dag_add_shader_nodetree_driver_relations (dag=0x600800400318, node=0x601800141408, ntree=0x603000039448) ``` at /home/i7deb64/blender-2.5-svn/__work__/src/source/blender/blenkernel/intern/depsgraph.c:368 ``` #4 0x0000000003468792 in dag_add_lamp_driver_relations (dag=0x600800400318, node=0x601800141408, la=0x6036000b9248) ``` at /home/i7deb64/blender-2.5-svn/__work__/src/source/blender/blenkernel/intern/depsgraph.c:433 ``` #5 0x000000000346a837 in build_dag_object (dag=0x600800400318, scenenode=0x6018001414c8, scene=0x605e000dd488, ob=0x604a00070288, mask=61) ``` at /home/i7deb64/blender-2.5-svn/__work__/src/source/blender/blenkernel/intern/depsgraph.c:717 ``` - 6 0x000000000346bf92 in build_dag (bmain=0x605000002888, sce=0x605e000dd488, mask=61) at /home/i7deb64/blender-2.5-svn/__work__/src/source/blender/blenkernel/intern/depsgraph.c:912 - 7 0x000000000346fd08 in dag_scene_build (bmain=0x605000002888, sce=0x605e000dd488) at /home/i7deb64/blender-2.5-svn/__work__/src/source/blender/blenkernel/intern/depsgraph.c:1502 - 8 0x0000000003470761 in DAG_scene_relations_update (bmain=0x605000002888, sce=0x605e000dd488) at /home/i7deb64/blender-2.5-svn/__work__/src/source/blender/blenkernel/intern/depsgraph.c:1610 - 9 0x000000000378248f in BKE_scene_update_tagged (eval_ctx=0x6004004ff178, bmain=0x605000002888, scene=0x605e000dd488) ``` at /home/i7deb64/blender-2.5-svn/__work__/src/source/blender/blenkernel/intern/scene.c:1533 ``` - 10 0x0000000001cde29d in wm_event_do_notifiers (C=0x60160000af98) at /home/i7deb64/blender-2.5-svn/__work__/src/source/blender/windowmanager/intern/wm_event_system.c:377 - 11 0x0000000001ccee27 in WM_main (C=0x60160000af98) at /home/i7deb64/blender-2.5-svn/__work__/src/source/blender/windowmanager/intern/wm.c:495 - 12 0x0000000001ccd231 in main (argc=1, argv=0x7fffffffe308) at /home/i7deb64/blender-2.5-svn/__work__/src/source/creator/creator.c:1756

@mont29, that's not directly related on the depsgraph. Crash happens in depsgraph because lamp's nodetree is still referencing the deleted object via it's driver. Not sure why it happens, will have a closer look later today (need to do some study work first).

And this bug is to be fixed before 'a', so raising the priority.

@mont29, that's not directly related on the depsgraph. Crash happens in depsgraph because lamp's nodetree is still referencing the deleted object via it's driver. Not sure why it happens, will have a closer look later today (need to do some study work first). And this bug is to be fixed before 'a', so raising the priority.

Added subscriber: @ideasman42

Added subscriber: @ideasman42

@ideasman42, can i summon you here as well? When i'm tryign to grab a lamp in this file i've got an assert failure around idprop code. Can you help with this please?

@ideasman42, can i summon you here as well? When i'm tryign to grab a lamp in this file i've got an assert failure around idprop code. Can you help with this please?

This issue was referenced by blender/blender-addons-contrib@ea01b24bba

This issue was referenced by blender/blender-addons-contrib@ea01b24bbacbb19019f40f4737d56bb92f04c66d

This issue was referenced by ea01b24bba

This issue was referenced by ea01b24bbacbb19019f40f4737d56bb92f04c66d

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit ea01b24bba.

Closed by commit ea01b24bba.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#39623
No description provided.