Fix T39623: deleting an object crashes